--- a/package.json
+++ b/package.json
@@ -1,60 +1,79 @@
 {
-  "name": "notion-like-theme",
-  "version": "0.0.0",
+  "name": "morenote",
+  "version": "0.0.1",
+  "description": "ng-zorro-antd admin panel front-end framework",
+  "author": "cipchk <cipchk@qq.com>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ng-alain/ng-alain.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ng-alain/ng-alain/issues"
+  },
+  "homepage": "https://ng-alain.com",
+  "license": "MIT",
+  "keywords": [
+    "delon",
+    "antd",
+    "ng-zorro-antd",
+    "angular",
+    "component",
+    "scaffold"
+  ],
   "scripts": {
+    "ng-high-memory": "node --max_old_space_size=8000 ./node_modules/@angular/cli/bin/ng",
     "ng": "ng",
     "start": "ng s -o",
-    "build": "npm run ng-high-memory build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "ng-high-memory": "node --max_old_space_size=8000 ./node_modules/@angular/cli/bin/ng",
     "hmr": "ng s -o --hmr",
+    "build": "npm run ng-high-memory build",
     "analyze": "npm run ng-high-memory build -- --source-map",
     "analyze:view": "source-map-explorer dist/**/*.js",
+    "lint": "npm run lint:ts && npm run lint:style",
+    "lint:ts": "ng lint --fix",
+    "lint:style": "npx stylelint 'src/**/*.less'",
+    "e2e": "ng e2e",
+    "test": "ng test --watch",
     "test-coverage": "ng test --code-coverage --watch=false",
     "color-less": "ng-alain-plugin-theme -t=colorLess",
     "theme": "ng-alain-plugin-theme -t=themeCss",
     "icon": "ng g ng-alain:plugin icon",
-    "prepare": "husky install",
-    "lint": "npm run lint:ts && npm run lint:style",
-    "lint:ts": "ng lint --fix",
-    "lint:style": "npx stylelint \"src/**/*.less\" --fix"
+    "prepare": "husky install"
   },
-  "private": true,
   "dependencies": {
-    "@angular/animations": "~13.1.0",
-    "@angular/common": "~13.1.0",
-    "@angular/compiler": "~13.1.0",
-    "@angular/core": "~13.1.0",
-    "@angular/forms": "~13.1.0",
-    "@angular/platform-browser": "~13.1.0",
-    "@angular/platform-browser-dynamic": "~13.1.0",
-    "@angular/router": "~13.1.0",
-    "ng-alain": "13.1.0",
-    "rxjs": "~7.4.0",
+    "@angular/animations": "~13.2.0",
+    "@angular/common": "~13.2.0",
+    "@angular/compiler": "~13.2.0",
+    "@angular/core": "~13.2.0",
+    "@angular/forms": "~13.2.0",
+    "@angular/platform-browser": "~13.2.0",
+    "@angular/platform-browser-dynamic": "~13.2.0",
+    "@angular/router": "~13.2.0",
+    "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4",
-    "@delon/abc": "^13.1.0",
-    "@delon/acl": "^13.1.0",
-    "@delon/auth": "^13.1.0",
-    "@delon/cache": "^13.1.0",
-    "@delon/form": "^13.1.0",
-    "@delon/mock": "^13.1.0",
-    "@delon/theme": "^13.1.0",
-    "@delon/util": "^13.1.0",
-    "@delon/chart": "^13.1.0",
     "ng-zorro-antd": "^13.0.0",
+    "@delon/abc": "^13.2.0",
+    "@delon/acl": "^13.2.0",
+    "@delon/auth": "^13.2.0",
+    "@delon/cache": "^13.2.0",
+    "@delon/chart": "^13.2.0",
+    "@delon/form": "^13.2.0",
+    "@delon/mock": "^13.2.0",
+    "@delon/theme": "^13.2.0",
+    "@delon/util": "^13.2.0",
+    "ngx-tinymce": "^13.0.0",
+    "ngx-ueditor": "^13.0.0",
+    "screenfull": "^6.0.0",
     "ajv": "^8.8.2",
-    "ajv-formats": "^2.1.1",
-    "screenfull": "^6.0.0"
+    "ajv-formats": "^2.1.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.1.2",
-    "@angular/cli": "~13.1.2",
-    "@angular/compiler-cli": "~13.1.0",
+    "@angular-devkit/build-angular": "~13.2.2",
+    "@angular/cli": "~13.2.2",
+    "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
-    "jasmine-core": "~3.10.0",
+    "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "~2.1.0",
@@ -69,32 +88,38 @@
     "@typescript-eslint/eslint-plugin": "~5.8.1",
     "@typescript-eslint/parser": "~5.8.1",
     "eslint": "^8.5.0",
-    "eslint-config-prettier": "^2.5.1",
+    "eslint-config-prettier": "~8.3.0",
     "eslint-plugin-import": "~2.25.3",
     "eslint-plugin-jsdoc": "~37.4.0",
     "eslint-plugin-prefer-arrow": "~1.2.3",
-    "eslint-plugin-prettier": "^2.5.1",
-    "prettier": "^2.5.1",
-    "husky": "^6.0.0",
-    "ng-alain": "^13.1.0",
-    "ng-alain-plugin-theme": "^13.0.1",
-    "source-map-explorer": "^2.5.2",
+    "eslint-plugin-prettier": "~4.0.0",
     "@angular/language-service": "~13.1.1",
-    "@delon/testing": "^13.1.0",
-    "lint-staged": "^12.1.4",
+    "source-map-explorer": "^2.5.2",
+    "prettier": "^2.5.1",
     "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
-    "stylelint-order": "^5.0.0"
+    "stylelint-order": "^5.0.0",
+    "@delon/testing": "^13.2.0",
+    "ng-alain": "^13.2.0",
+    "ng-alain-plugin-theme": "^13.0.1",
+    "ng-alain-sts": "^0.0.1",
+    "@types/jasminewd2": "~2.0.10",
+    "jasmine-spec-reporter": "^6.0.0",
+    "protractor": "~7.0.0",
+    "ts-node": "~9.1.1",
+    "node-fetch": "^2.6.1",
+    "husky": "^6.0.0",
+    "lint-staged": "^12.1.4"
   },
   "lint-staged": {
     "(src)/**/*.{html,ts}": [
       "eslint --fix"
     ],
     "(src)/**/*.less": [
-      "npx stylelint --syntax less --fix"
+      "npm run lint:style"
     ]
   }
 }
