--- a/angular.json
+++ b/angular.json
@@ -66,7 +66,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less"
+              "src/styles.less",
+              "node_modules/vditor/src/assets/scss/index.scss"
             ],
             "scripts": [],
             "allowedCommonJsDependencies": [
