--- a/package.json
+++ b/package.json
@@ -48,10 +48,6 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4",
-    "ng-zorro-antd": "^13.0.0",
     "@delon/abc": "^13.2.0",
     "@delon/acl": "^13.2.0",
     "@delon/auth": "^13.2.0",
@@ -61,30 +57,32 @@
     "@delon/mock": "^13.2.0",
     "@delon/theme": "^13.2.0",
     "@delon/util": "^13.2.0",
+    "@ng-util/markdown": "^13.0.0",
+    "ajv": "^8.8.2",
+    "ajv-formats": "^2.1.1",
+    "ng-zorro-antd": "^13.0.0",
     "ngx-tinymce": "^13.0.0",
     "ngx-ueditor": "^13.0.0",
+    "rxjs": "~7.5.0",
     "screenfull": "^6.0.0",
-    "ajv": "^8.8.2",
-    "ajv-formats": "^2.1.1"
+    "tslib": "^2.3.0",
+    "vditor": "^3.8.11",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~13.2.2",
-    "@angular/cli": "~13.2.2",
-    "@angular/compiler-cli": "~13.2.0",
-    "@types/jasmine": "~3.10.0",
-    "@types/node": "^12.11.1",
-    "jasmine-core": "~4.0.0",
-    "karma": "~6.3.0",
-    "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.5.2",
     "@angular-eslint/builder": "~13.0.1",
     "@angular-eslint/eslint-plugin": "~13.0.1",
     "@angular-eslint/eslint-plugin-template": "~13.0.1",
     "@angular-eslint/schematics": "~13.0.1",
     "@angular-eslint/template-parser": "~13.0.1",
+    "@angular/cli": "~13.2.2",
+    "@angular/compiler-cli": "~13.2.0",
+    "@angular/language-service": "~13.1.1",
+    "@delon/testing": "^13.2.0",
+    "@types/jasmine": "~3.10.0",
+    "@types/jasminewd2": "~2.0.10",
+    "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "~5.8.1",
     "@typescript-eslint/parser": "~5.8.1",
     "eslint": "^8.5.0",
@@ -93,26 +91,30 @@
     "eslint-plugin-jsdoc": "~37.4.0",
     "eslint-plugin-prefer-arrow": "~1.2.3",
     "eslint-plugin-prettier": "~4.0.0",
-    "@angular/language-service": "~13.1.1",
-    "source-map-explorer": "^2.5.2",
+    "husky": "^6.0.0",
+    "jasmine-core": "~4.0.0",
+    "jasmine-spec-reporter": "^6.0.0",
+    "karma": "~6.3.0",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage": "~2.1.0",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "~1.7.0",
+    "lint-staged": "^12.1.4",
+    "ng-alain": "^13.2.0",
+    "ng-alain-plugin-theme": "^13.0.1",
+    "ng-alain-sts": "^0.0.1",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.5.1",
+    "protractor": "~7.0.0",
+    "source-map-explorer": "^2.5.2",
     "stylelint": "^14.2.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^24.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
     "stylelint-order": "^5.0.0",
-    "@delon/testing": "^13.2.0",
-    "ng-alain": "^13.2.0",
-    "ng-alain-plugin-theme": "^13.0.1",
-    "ng-alain-sts": "^0.0.1",
-    "@types/jasminewd2": "~2.0.10",
-    "jasmine-spec-reporter": "^6.0.0",
-    "protractor": "~7.0.0",
     "ts-node": "~9.1.1",
-    "node-fetch": "^2.6.1",
-    "husky": "^6.0.0",
-    "lint-staged": "^12.1.4"
+    "typescript": "~4.5.2"
   },
   "lint-staged": {
     "(src)/**/*.{html,ts}": [
