增加textbus和vditor编辑器

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "scripts": {
     "ng-high-memory": "node --max_old_space_size=8000 ./node_modules/@angular/cli/bin/ng",
     "ng": "ng",
-    "start": "ng s -o --port 3201" ,
+    "start": "ng s -o --port 3201",
     "hmr": "ng s -o --hmr",
     "build": "npm run ng-high-memory build",
     "analyze": "npm run ng-high-memory build -- --source-map",
@@ -58,6 +58,10 @@
     "@delon/theme": "^13.2.0",
     "@delon/util": "^13.2.0",
     "@ng-util/markdown": "^13.0.0",
+    "@textbus/browser": "^2.0.0-alpha.50",
+    "@textbus/core": "^2.0.0-alpha.50",
+    "@textbus/editor": "^2.0.0-alpha.52",
+    "@textbus/textbus": "^1.1.8",
     "ajv": "^8.8.2",
     "ajv-formats": "^2.1.1",
     "ng-zorro-antd": "^13.0.0",
