--- a/package.json
+++ b/package.json
@@ -64,11 +64,13 @@
     "@textbus/textbus": "^1.1.8",
     "ajv": "^8.8.2",
     "ajv-formats": "^2.1.1",
+    "futoin-hkdf": "^1.5.0",
     "ng-zorro-antd": "^13.0.0",
     "ngx-tinymce": "^13.0.0",
     "ngx-ueditor": "^13.0.0",
     "rxjs": "~7.5.0",
     "screenfull": "^6.0.0",
+    "sm-crypto": "^0.3.8",
     "tslib": "^2.3.0",
     "vditor": "^3.8.11",
     "zone.js": "~0.11.4"
