--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "ajv": "^8.8.2",
     "ajv-formats": "^2.1.1",
     "futoin-hkdf": "^1.5.0",
+    "js-base64": "^3.7.2",
     "ng-zorro-antd": "^13.0.0",
     "ngx-tinymce": "^13.0.0",
     "ngx-ueditor": "^13.0.0",
