--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "screenfull": "^6.0.0",
     "sm-crypto": "^0.3.8",
     "tslib": "^2.3.0",
+    "uuid-int": "^3.1.0",
     "vditor": "^3.8.11",
     "zone.js": "~0.11.4"
   },
