--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@textbus/textbus": "^1.1.8",
     "ajv": "^8.8.2",
     "ajv-formats": "^2.1.1",
+    "date-fns": "^2.28.0",
     "futoin-hkdf": "^1.5.0",
     "js-base64": "^3.7.2",
     "ng-zorro-antd": "^13.0.0",
