--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "@aomao/engine": "^2.9.26",
     "@delon/abc": "^13.2.0",
     "@delon/acl": "^13.2.0",
     "@delon/auth": "^13.2.0",
