--- a/package.json
+++ b/package.json
@@ -40,39 +40,37 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@angular/animations": "~13.2.0",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
-    "@angular/forms": "~13.2.0",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/router": "~13.2.0",
+    "@angular/animations": "^14.2.4",
+    "@angular/common": "^14.2.4",
+    "@angular/compiler": "^14.2.4",
+    "@angular/core": "^14.2.4",
+    "@angular/forms": "^14.2.4",
+    "@angular/platform-browser": "^14.2.4",
+    "@angular/platform-browser-dynamic": "^14.2.4",
+    "@angular/router": "^14.2.4",
+    "@angular/service-worker": "^14.2.4",
     "@aomao/engine": "^2.9.26",
-    "@delon/abc": "^13.2.0",
-    "@delon/acl": "^13.2.0",
-    "@delon/auth": "^13.2.0",
-    "@delon/cache": "^13.2.0",
-    "@delon/chart": "^13.2.0",
-    "@delon/form": "^13.2.0",
-    "@delon/mock": "^13.2.0",
-    "@delon/theme": "^13.2.0",
-    "@delon/util": "^13.2.0",
+    "@delon/abc": "^14.0.0",
+    "@delon/acl": "^14.0.0",
+    "@delon/auth": "^14.0.0",
+    "@delon/cache": "^14.0.0",
+    "@delon/chart": "^14.0.0",
+    "@delon/form": "^14.0.0",
+    "@delon/mock": "^14.0.0",
+    "@delon/theme": "^14.0.0",
+    "@delon/util": "^14.0.0",
     "@ng-util/markdown": "^13.0.0",
-    "@textbus/browser": "^2.0.0-alpha.50",
-    "@textbus/core": "^2.0.0-alpha.50",
-    "@textbus/editor": "^2.0.0-alpha.52",
-    "@textbus/textbus": "^1.1.8",
+    "@textbus/editor": "^2.1.6",
     "ajv": "^8.8.2",
     "ajv-formats": "^2.1.1",
     "date-fns": "^2.28.0",
     "futoin-hkdf": "^1.5.0",
     "js-base64": "^3.7.2",
-    "ng-zorro-antd": "^13.0.0",
-    "ngx-tinymce": "^13.0.0",
-    "ngx-ueditor": "^13.0.0",
+    "ng-zorro-antd": "^14.0.0",
+    "ngx-tinymce": "^14.1.1",
+    "ngx-ueditor": "^14.0.0",
     "rxjs": "~7.5.0",
-    "screenfull": "^6.0.0",
+    "screenfull": "^6.0.2",
     "sm-crypto": "^0.3.8",
     "tslib": "^2.3.0",
     "uuid-int": "^3.1.0",
@@ -80,51 +78,50 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.2",
-    "@angular-eslint/builder": "~13.0.1",
-    "@angular-eslint/eslint-plugin": "~13.0.1",
-    "@angular-eslint/eslint-plugin-template": "~13.0.1",
-    "@angular-eslint/schematics": "~13.0.1",
-    "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.2.2",
-    "@angular/compiler-cli": "~13.2.0",
-    "@angular/language-service": "~13.1.1",
-    "@delon/testing": "^13.2.0",
-    "@types/jasmine": "~3.10.0",
-    "@types/jasminewd2": "~2.0.10",
+    "@angular-devkit/build-angular": "^14.2.1",
+    "@angular-eslint/builder": "~14.0.3",
+    "@angular-eslint/eslint-plugin": "~14.0.3",
+    "@angular-eslint/eslint-plugin-template": "~14.0.3",
+    "@angular-eslint/template-parser": "~14.0.3",
+    "@angular/cli": "^14.2.4",
+    "@angular/compiler-cli": "^14.2.4",
+    "@angular/language-service": "^14.2.3",
+    "@delon/testing": "^14.0.0",
+    "@types/jasmine": "^4.0.0",
+    "@types/jasminewd2": "^2.0.10",
     "@types/node": "^12.11.1",
-    "@typescript-eslint/eslint-plugin": "~5.8.1",
-    "@typescript-eslint/parser": "~5.8.1",
-    "eslint": "^8.5.0",
-    "eslint-config-prettier": "~8.3.0",
-    "eslint-plugin-import": "~2.25.3",
-    "eslint-plugin-jsdoc": "~37.4.0",
-    "eslint-plugin-prefer-arrow": "~1.2.3",
-    "eslint-plugin-prettier": "~4.0.0",
-    "husky": "^6.0.0",
-    "jasmine-core": "~4.0.0",
-    "jasmine-spec-reporter": "^6.0.0",
-    "karma": "~6.3.0",
+    "@typescript-eslint/eslint-plugin": "~5.35.1",
+    "@typescript-eslint/parser": "~5.35.1",
+    "eslint": "^8.23.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsdoc": "^39.3.6",
+    "eslint-plugin-prefer-arrow": "^1.2.3",
+    "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.1",
+    "jasmine-core": "~4.3.0",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.4.1",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.1.0",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "~1.7.0",
+    "karma-coverage": "^2.2.0",
+    "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.0.0",
     "lint-staged": "^12.1.4",
-    "ng-alain": "^13.2.0",
-    "ng-alain-plugin-theme": "^13.0.1",
-    "ng-alain-sts": "^0.0.1",
+    "ng-alain": "^14.0.0",
+    "ng-alain-plugin-theme": "^13.0.3",
+    "ng-alain-sts": "^0.0.2",
     "node-fetch": "^2.6.1",
-    "prettier": "^2.5.1",
+    "prettier": "^2.7.1",
     "protractor": "~7.0.0",
     "source-map-explorer": "^2.5.2",
-    "stylelint": "^14.2.0",
+    "stylelint": "^14.13.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-rational-order": "^0.1.2",
-    "stylelint-config-standard": "^24.0.0",
+    "stylelint-config-standard": "^28.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
     "stylelint-order": "^5.0.0",
-    "ts-node": "~9.1.1",
-    "typescript": "~4.5.2"
+    "ts-node": "10.9.1",
+    "typescript": "~4.7.2"
   },
   "lint-staged": {
     "(src)/**/*.{html,ts}": [
