--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "ng-zorro-antd": "^14.0.0",
     "ngx-tinymce": "^14.1.1",
     "ngx-ueditor": "^14.0.0",
+    "qrious": "^4.0.2",
     "rxjs": "~7.5.0",
     "screenfull": "^6.0.2",
     "sm-crypto": "^0.3.8",
