--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,10 +3,10 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "type": "chrome",
+      "type": "msedge",
       "request": "launch",
       "name": "Launch Chrome against localhost",
-      "url": "http://localhost:4200",
+      "url": "http://localhost:3201",
       "webRoot": "${workspaceRoot}",
       "sourceMaps": true
     }
