--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,7 @@
   "tasks": [
     {
       "type": "npm",
+      "label": "build",
       "script": "start",
       "isBackground": true,
       "problemMatcher": {
