--- a/package.json
+++ b/package.json
@@ -25,10 +25,10 @@
     "ng": "ng",
     "start": "ng s -o --port 3201",
     "hmr": "ng s -o --hmr",
-    "build": "npm run ng-high-memory build",
-    "analyze": "npm run ng-high-memory build -- --source-map",
+    "build": "pnpm run ng-high-memory build",
+    "analyze": "pnpm run ng-high-memory build -- --source-map",
     "analyze:view": "source-map-explorer dist/**/*.js",
-    "lint": "npm run lint:ts && npm run lint:style",
+    "lint": "pnpm run lint:ts && npm run lint:style",
     "lint:ts": "ng lint --fix",
     "lint:style": "npx stylelint 'src/**/*.less'",
     "e2e": "ng e2e",
@@ -49,6 +49,7 @@
     "@angular/platform-browser-dynamic": "^14.2.4",
     "@angular/router": "^14.2.4",
     "@angular/service-worker": "^14.2.4",
+    "@antv/g2": "^4.2.8",
     "@aomao/engine": "^2.9.26",
     "@delon/abc": "^14.0.0",
     "@delon/acl": "^14.0.0",
@@ -61,11 +62,14 @@
     "@delon/util": "^14.0.0",
     "@ng-util/markdown": "^13.0.0",
     "@textbus/editor": "^2.1.6",
+    "@types/mockjs": "^1.0.7",
     "ajv": "^8.8.2",
     "ajv-formats": "^2.1.1",
     "date-fns": "^2.28.0",
     "futoin-hkdf": "^1.5.0",
     "js-base64": "^3.7.2",
+    "jszip": "3.10.1",
+    "mockjs": "^1.1.0",
     "ng-zorro-antd": "^14.0.0",
     "ngx-tinymce": "^14.1.1",
     "ngx-ueditor": "^14.0.0",
@@ -130,8 +134,8 @@
       "eslint --fix"
     ],
     "(src)/**/*.less": [
-      "npm run lint:style"
+      "pnpm run lint:style"
     ]
   },
-  "packageManager": "yarn@3.2.4"
+  "packageManager": "pnpm@6.26.1"
 }
