Upgrade to angular15

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -29,7 +29,8 @@
           "ng-deep"
         ]
       }
-    ]
+    ],
+    "import-notation": "string"
   },
   "ignoreFiles": [
     "src/assets/**/*"
