--- a/package.json
+++ b/package.json
@@ -40,26 +40,26 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@angular/animations": "^14.2.4",
-    "@angular/common": "^14.2.4",
-    "@angular/compiler": "^14.2.4",
-    "@angular/core": "^14.2.4",
-    "@angular/forms": "^14.2.4",
-    "@angular/platform-browser": "^14.2.4",
-    "@angular/platform-browser-dynamic": "^14.2.4",
-    "@angular/router": "^14.2.4",
-    "@angular/service-worker": "^14.2.4",
+    "@angular/animations": "^15.1.4",
+    "@angular/common": "^15.1.4",
+    "@angular/compiler": "^15.1.4",
+    "@angular/core": "^15.1.4",
+    "@angular/forms": "^15.1.4",
+    "@angular/platform-browser": "^15.1.4",
+    "@angular/platform-browser-dynamic": "^15.1.4",
+    "@angular/router": "^15.1.4",
+    "@angular/service-worker": "^15.1.4",
     "@antv/g2": "^4.2.8",
     "@aomao/engine": "^2.9.26",
-    "@delon/abc": "^14.0.0",
-    "@delon/acl": "^14.0.0",
-    "@delon/auth": "^14.0.0",
-    "@delon/cache": "^14.0.0",
-    "@delon/chart": "^14.0.0",
-    "@delon/form": "^14.0.0",
-    "@delon/mock": "^14.0.0",
-    "@delon/theme": "^14.0.0",
-    "@delon/util": "^14.0.0",
+    "@delon/abc": "^15.0.1",
+    "@delon/acl": "^15.0.1",
+    "@delon/auth": "^15.0.1",
+    "@delon/cache": "^15.0.1",
+    "@delon/chart": "^15.0.1",
+    "@delon/form": "^15.0.1",
+    "@delon/mock": "^15.0.1",
+    "@delon/theme": "^15.0.1",
+    "@delon/util": "^15.0.1",
     "@ng-util/markdown": "^13.0.0",
     "@textbus/editor": "^2.1.6",
     "@types/mockjs": "^1.0.7",
@@ -70,11 +70,11 @@
     "js-base64": "^3.7.2",
     "jszip": "3.10.1",
     "mockjs": "^1.1.0",
-    "ng-zorro-antd": "^14.0.0",
+    "ng-zorro-antd": "^15.0.3",
     "ngx-tinymce": "^14.1.1",
     "ngx-ueditor": "^14.0.0",
     "qrious": "^4.0.2",
-    "rxjs": "~7.5.0",
+    "rxjs": "~7.8.0",
     "screenfull": "^6.0.2",
     "sm-crypto": "^0.3.8",
     "ts-indexdb": "^0.0.6",
@@ -84,27 +84,27 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^14.2.1",
-    "@angular-eslint/builder": "~14.0.3",
-    "@angular-eslint/eslint-plugin": "~14.0.3",
-    "@angular-eslint/eslint-plugin-template": "~14.0.3",
-    "@angular-eslint/template-parser": "~14.0.3",
-    "@angular/cli": "^14.2.4",
-    "@angular/compiler-cli": "^14.2.4",
-    "@angular/language-service": "^14.2.3",
-    "@delon/testing": "^14.0.0",
+    "@angular-devkit/build-angular": "^15.1.5",
+    "@angular-eslint/builder": "~15.2.0",
+    "@angular-eslint/eslint-plugin": "~15.2.0",
+    "@angular-eslint/eslint-plugin-template": "~15.2.0",
+    "@angular-eslint/template-parser": "~15.2.0",
+    "@angular/cli": "^15.1.5",
+    "@angular/compiler-cli": "^15.1.4",
+    "@angular/language-service": "^15.1.0",
+    "@delon/testing": "^15.0.1",
     "@types/jasmine": "^4.0.0",
     "@types/jasminewd2": "^2.0.10",
     "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "~5.35.1",
-    "@typescript-eslint/parser": "~5.35.1",
-    "eslint": "^8.23.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsdoc": "^39.3.6",
-    "eslint-plugin-prefer-arrow": "^1.2.3",
-    "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.1",
+    "@typescript-eslint/eslint-plugin": "~5.49.0",
+    "@typescript-eslint/parser": "~5.49.0",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "~8.6.0",
+    "eslint-plugin-import": "~2.26.0",
+    "eslint-plugin-jsdoc": "~39.7.4",
+    "eslint-plugin-prefer-arrow": "~1.2.3",
+    "eslint-plugin-prettier": "~4.2.1",
+    "husky": "^7.0.4",
     "jasmine-core": "~4.3.0",
     "jasmine-spec-reporter": "^7.0.0",
     "karma": "^6.4.1",
@@ -113,13 +113,11 @@
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
     "lint-staged": "^12.1.4",
-    "ng-alain": "^14.0.0",
-    "ng-alain-plugin-theme": "^13.0.3",
-    "ng-alain-sts": "^0.0.2",
+    "ng-alain": "^15.0.1",
     "node-fetch": "^2.6.1",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.3",
     "protractor": "~7.0.0",
-    "source-map-explorer": "^2.5.2",
+    "source-map-explorer": "^2.5.3",
     "stylelint": "^14.13.0",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-rational-order": "^0.1.2",
@@ -127,7 +125,9 @@
     "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
     "stylelint-order": "^5.0.0",
     "ts-node": "10.9.1",
-    "typescript": "~4.7.2"
+    "typescript": "~4.9.5",
+    "@angular-eslint/schematics": "~15.2.0",
+    "eslint-plugin-deprecation": "~1.3.3"
   },
   "lint-staged": {
     "(src)/**/*.{html,ts}": [
