--- a/package.json
+++ b/package.json
@@ -68,7 +68,10 @@
     "date-fns": "^2.28.0",
     "futoin-hkdf": "^1.5.0",
     "js-base64": "^3.7.2",
+    "jsonc-parser": "3.0.0",
     "jszip": "3.10.1",
+    "less": "4.1.3",
+    "localforage": "^1.10.0",
     "mockjs": "^1.1.0",
     "ng-zorro-antd": "^15.0.3",
     "ngx-tinymce": "^14.1.1",
@@ -88,6 +91,7 @@
     "@angular-eslint/builder": "~15.2.0",
     "@angular-eslint/eslint-plugin": "~15.2.0",
     "@angular-eslint/eslint-plugin-template": "~15.2.0",
+    "@angular-eslint/schematics": "~15.2.0",
     "@angular-eslint/template-parser": "~15.2.0",
     "@angular/cli": "^15.1.5",
     "@angular/compiler-cli": "^15.1.4",
@@ -100,6 +104,7 @@
     "@typescript-eslint/parser": "~5.49.0",
     "eslint": "^8.33.0",
     "eslint-config-prettier": "~8.6.0",
+    "eslint-plugin-deprecation": "~1.3.3",
     "eslint-plugin-import": "~2.26.0",
     "eslint-plugin-jsdoc": "~39.7.4",
     "eslint-plugin-prefer-arrow": "~1.2.3",
@@ -125,9 +130,7 @@
     "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
     "stylelint-order": "^5.0.0",
     "ts-node": "10.9.1",
-    "typescript": "~4.9.5",
-    "@angular-eslint/schematics": "~15.2.0",
-    "eslint-plugin-deprecation": "~1.3.3"
+    "typescript": "~4.9.5"
   },
   "lint-staged": {
     "(src)/**/*.{html,ts}": [
