--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "qrious": "^4.0.2",
     "rxjs": "~7.8.0",
     "screenfull": "^6.0.2",
-    "github-hyfre-sm-crypto": "0.3.12",
+    "github-hyfree-sm-crypto": "0.3.12",
     "ts-indexdb": "^0.0.6",
     "tslib": "^2.3.0",
     "uuid-int": "^3.1.0",
