--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "lint:style": "npx stylelint 'src/**/*.less'",
     "e2e": "ng e2e",
     "test": "ng test --watch",
+    "jest": "pnpm run test",
     "test-coverage": "ng test --code-coverage --watch=false",
     "color-less": "ng-alain-plugin-theme -t=colorLess",
     "theme": "ng-alain-plugin-theme -t=themeCss",
     "icon": "ng g ng-alain:plugin icon",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "create-config": "ts-jest config:init"
   },
   "dependencies": {
     "@angular/animations": "^15.1.4",
@@ -67,6 +69,7 @@
     "ajv-formats": "^2.1.1",
     "date-fns": "^2.28.0",
     "futoin-hkdf": "^1.5.0",
+    "github-hyfree-sm-crypto": "0.3.12",
     "js-base64": "^3.7.2",
     "jsonc-parser": "3.0.0",
     "jszip": "3.10.1",
@@ -79,7 +82,6 @@
     "qrious": "^4.0.2",
     "rxjs": "~7.8.0",
     "screenfull": "^6.0.2",
-    "github-hyfree-sm-crypto": "0.3.12",
     "ts-indexdb": "^0.0.6",
     "tslib": "^2.3.0",
     "uuid-int": "^3.1.0",
@@ -99,6 +101,8 @@
     "@delon/testing": "^15.0.1",
     "@types/jasmine": "^4.0.0",
     "@types/jasminewd2": "^2.0.10",
+    "@types/jest": "^29.5.1",
+    "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.9",
     "@typescript-eslint/eslint-plugin": "~5.49.0",
     "@typescript-eslint/parser": "~5.49.0",
@@ -112,6 +116,7 @@
     "husky": "^7.0.4",
     "jasmine-core": "~4.3.0",
     "jasmine-spec-reporter": "^7.0.0",
+    "jest": "^29.5.0",
     "karma": "^6.4.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage": "^2.2.0",
@@ -129,6 +134,7 @@
     "stylelint-config-standard": "^28.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
     "stylelint-order": "^5.0.0",
+    "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~4.9.5"
   },
