--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "qrious": "^4.0.2",
     "rxjs": "~7.8.0",
     "screenfull": "^6.0.2",
+    "simple-mind-map": "^0.6.13",
     "ts-indexdb": "^0.0.6",
     "tslib": "^2.3.0",
     "uuid-int": "^3.1.0",
