--- a/package.json
+++ b/package.json
@@ -42,26 +42,26 @@
     "create-config": "ts-jest config:init"
   },
   "dependencies": {
-    "@angular/animations": "^15.1.4",
-    "@angular/common": "^15.1.4",
-    "@angular/compiler": "^15.1.4",
-    "@angular/core": "^15.1.4",
-    "@angular/forms": "^15.1.4",
-    "@angular/platform-browser": "^15.1.4",
-    "@angular/platform-browser-dynamic": "^15.1.4",
-    "@angular/router": "^15.1.4",
-    "@angular/service-worker": "^15.1.4",
-    "@antv/g2": "^4.2.8",
+    "@angular/animations": "^16.2.2",
+    "@angular/common": "^16.2.2",
+    "@angular/compiler": "^16.2.2",
+    "@angular/core": "^16.2.2",
+    "@angular/forms": "^16.2.2",
+    "@angular/platform-browser": "^16.2.2",
+    "@angular/platform-browser-dynamic": "^16.2.2",
+    "@angular/router": "^16.2.2",
+    "@angular/service-worker": "^16.2.2",
+    "@antv/g2": "^4.2.10",
     "@aomao/engine": "^2.9.26",
-    "@delon/abc": "^15.0.1",
-    "@delon/acl": "^15.0.1",
-    "@delon/auth": "^15.0.1",
-    "@delon/cache": "^15.0.1",
-    "@delon/chart": "^15.0.1",
-    "@delon/form": "^15.0.1",
-    "@delon/mock": "^15.0.1",
-    "@delon/theme": "^15.0.1",
-    "@delon/util": "^15.0.1",
+    "@delon/abc": "^16.2.1",
+    "@delon/acl": "^16.2.1",
+    "@delon/auth": "^16.2.1",
+    "@delon/cache": "^16.2.1",
+    "@delon/chart": "^16.2.1",
+    "@delon/form": "^16.2.1",
+    "@delon/mock": "^16.2.1",
+    "@delon/theme": "^16.2.1",
+    "@delon/util": "^16.2.1",
     "@ng-util/markdown": "^13.0.0",
     "@textbus/editor": "^2.1.6",
     "@types/mockjs": "^1.0.7",
@@ -76,7 +76,7 @@
     "less": "4.1.3",
     "localforage": "^1.10.0",
     "mockjs": "^1.1.0",
-    "ng-zorro-antd": "^15.0.3",
+    "ng-zorro-antd": "^16.1.0",
     "ngx-tinymce": "^14.1.1",
     "ngx-ueditor": "^14.0.0",
     "qrious": "^4.0.2",
@@ -87,33 +87,33 @@
     "tslib": "^2.3.0",
     "uuid-int": "^3.1.0",
     "vditor": "^3.8.11",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.13.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^15.1.5",
-    "@angular-eslint/builder": "~15.2.0",
-    "@angular-eslint/eslint-plugin": "~15.2.0",
-    "@angular-eslint/eslint-plugin-template": "~15.2.0",
-    "@angular-eslint/schematics": "~15.2.0",
-    "@angular-eslint/template-parser": "~15.2.0",
-    "@angular/cli": "^15.1.5",
-    "@angular/compiler-cli": "^15.1.4",
-    "@angular/language-service": "^15.1.0",
-    "@delon/testing": "^15.0.1",
+    "@angular-devkit/build-angular": "^16.2.0",
+    "@angular-eslint/builder": "~16.1.0",
+    "@angular-eslint/eslint-plugin": "~16.1.0",
+    "@angular-eslint/eslint-plugin-template": "~16.1.0",
+    "@angular-eslint/schematics": "~16.1.0",
+    "@angular-eslint/template-parser": "~16.1.0",
+    "@angular/cli": "^16.2.0",
+    "@angular/compiler-cli": "^16.2.2",
+    "@angular/language-service": "^16.1.0",
+    "@delon/testing": "^16.2.1",
     "@types/jasmine": "^4.0.0",
     "@types/jasminewd2": "^2.0.10",
     "@types/jest": "^29.5.1",
     "@types/mocha": "^10.0.1",
     "@types/node": "^18.11.9",
-    "@typescript-eslint/eslint-plugin": "~5.49.0",
-    "@typescript-eslint/parser": "~5.49.0",
-    "eslint": "^8.33.0",
-    "eslint-config-prettier": "~8.6.0",
-    "eslint-plugin-deprecation": "~1.3.3",
-    "eslint-plugin-import": "~2.26.0",
-    "eslint-plugin-jsdoc": "~39.7.4",
+    "@typescript-eslint/eslint-plugin": "~6.1.0",
+    "@typescript-eslint/parser": "~6.1.0",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "~8.8.0",
+    "eslint-plugin-deprecation": "~1.4.1",
+    "eslint-plugin-import": "~2.27.5",
+    "eslint-plugin-jsdoc": "~46.4.4",
     "eslint-plugin-prefer-arrow": "~1.2.3",
-    "eslint-plugin-prettier": "~4.2.1",
+    "eslint-plugin-prettier": "~5.0.0",
     "husky": "^7.0.4",
     "jasmine-core": "~4.3.0",
     "jasmine-spec-reporter": "^7.0.0",
@@ -124,13 +124,13 @@
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.0.0",
     "lint-staged": "^12.1.4",
-    "ng-alain": "^15.0.1",
+    "ng-alain": "^16.2.1",
+    "ng-alain-plugin-theme": "^15.0.1",
     "node-fetch": "^2.6.1",
-    "prettier": "^2.8.3",
+    "prettier": "^3.0.0",
     "protractor": "~7.0.0",
     "source-map-explorer": "^2.5.3",
     "stylelint": "^14.13.0",
-    "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-rational-order": "^0.1.2",
     "stylelint-config-standard": "^28.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
