--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -14,11 +14,14 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [20]
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20.11.1
+      #- uses: actions/setup-node@v4
+      # with:
+      #  node-version: 20.11.1
       - uses: pnpm/action-setup@v3
         with:
           version: 8
