--- a/package.json
+++ b/package.json
@@ -65,10 +65,10 @@
     "@ng-util/markdown": "^13.0.0",
     "@textbus/editor": "^2.1.6",
     "@types/mockjs": "^1.0.7",
+    "@types/sm-crypto": "^0.3.4",
     "ajv": "^8.8.2",
     "ajv-formats": "^2.1.1",
     "date-fns": "^2.28.0",
-    "github-hyfree-sm-crypto": "0.3.12",
     "js-base64": "^3.7.2",
     "jsonc-parser": "3.0.0",
     "jszip": "3.10.1",
@@ -82,6 +82,7 @@
     "rxjs": "~7.8.0",
     "screenfull": "^6.0.2",
     "simple-mind-map": "^0.6.16",
+    "sm-crypto": "0.3.13",
     "ts-indexdb": "^0.0.6",
     "tslib": "^2.3.0",
     "uuid-int": "^3.1.0",
@@ -99,6 +100,7 @@
     "@angular/compiler-cli": "^18.1.1",
     "@angular/language-service": "^18.0.0",
     "@delon/testing": "^18.0.2",
+    "@ng-util/monaco-editor": "^18.0.0",
     "@types/jasmine": "^4.0.0",
     "@types/jasminewd2": "^2.0.10",
     "@types/jest": "^29.5.1",
@@ -125,6 +127,7 @@
     "lint-staged": "^12.1.4",
     "ng-alain": "^18.0.2",
     "ng-alain-plugin-theme": "^18.0.0",
+    "ngx-tinymce": "^18.0.0",
     "node-fetch": "^2.6.1",
     "prettier": "^3.3.2",
     "protractor": "~7.0.0",
@@ -136,9 +139,7 @@
     "stylelint-order": "^5.0.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "~5.5.3",
-    "ngx-tinymce": "^18.0.0",
-    "@ng-util/monaco-editor": "^18.0.0"
+    "typescript": "~5.5.3"
   },
   "lint-staged": {
     "(src)/**/*.{html,ts}": [
